<resources>
    <string name="app_name">Wiz warehouse</string>
    <string name="img_top">img_top</string>
    <string name="img_login">img_login</string>
    <string name="user_login">User Login</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="img_email">img_email</string>
    <string name="img_password">img_password</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_the_verification_code_sent_to_your_email">Enter the verification code sent to your email</string>
    <string name="didn_t_receive_the_verification_code">Didn\'t receive the verification code?</string>
    <string name="resend">Resend</string>
    <string name="resend_verification_code_in">Resend verification code in</string>
    <string name="_01_59_sec">01:59 sec</string>
    <string name="user_check_in">User Check In</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="enterprise_solutions_inc_am_esi_llp_h_57_h_block_sector_63_noida_uttar_pradsh_201301_india">Enterprise Solutions Inc. (AM Esi LLP H 57, H Block, Sector 63, Noida, Uttar Pradsh, 201301, India )</string>
    <string name="location_pin">location_pin</string>
    <string name="img_click">img_click</string>
    <string name="selfie">Selfie</string>
    <string name="ok">Ok</string>
    <string name="you_re_all_set_your_check_in_was_successful_head_over_to_your_survey_and_work_on_your_assigned_tasks">You’re all set! Your check-in was successful. Head over to your survey and work on your assigned tasks.</string>
    <string name="check_in_successful">Check-in Successful</string>
    <string name="survey">Survey</string>
    <string name="shaloo">Shaloo</string>
    <string name="img_down">img_down</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="close_drawer">Close Navigation</string>
    <string name="shalooverma02_gmail_com">shalooverma02@gmail.com</string>
    <string name="shaloo_verma">Shaloo Verma</string>
    <string name="img_edit">img_edit</string>
    <string name="shift_check_out">Shift Check Out</string>
    <string name="logout">Logout</string>
    <string name="question_1_6">Question 1/6</string>
    <string name="user_survey_questions">User Survey Questions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1_a_can_you_please_tell_me_your_age">Q1 a. Can you please tell me your age?</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="b_do_you_smoke">b. Do you smoke?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="thanks_for_your_time">Thanks for Your Time!</string>
    <string name="if_you_ever_wish_to_share_your_experience_you_re_welcome_to_take_the_survey_anytime">If you ever wish to share your experience, you\'re welcome to take the survey anytime.</string>
    <string name="q2_would_you_like_to_participate_in_this_survey">Q2. Would you like to participate in this survey?</string>
    <string name="previous">Previous</string>
    <string name="i_hereby_declare_and_acknowledge_that_i_am_a_smoker_and_i_am_above_18_years_of_age_i_give_my_consent_to_participate_in_the_market_insights_activity_being_conducted_by_the_company">I hereby declare and acknowledge that I am a smoker, and I am above 18 years of age. I give my consent to participate in the market insights activity being conducted by the Company.</string>
    <string name="add_your_signature">Add your signature</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="q3_a_please_mention_your_name">Q3. a. Please mention your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="b_please_select_your_gender">b. Please select your gender</string>
    <string name="male">Male</string>
    <string name="tick">tick</string>
    <string name="others_please_specify">Others (Please specify)</string>
    <string name="enter">Enter</string>
    <string name="q4_what_brand_of_cigarette_do_you_currently_buy_to_smoke_most_often">Q4. What brand of cigarette do you currently buy to smoke most often?</string>
    <string name="q5_given_a_choice_would_you_like_to_change_your_current_main_brand_to_any_other_brand">Q5. Given a choice, would you like to change your current main brand to any other brand?</string>
    <string name="c_please_rate_for_stick">C. Please rate for Stick</string>
    <string name="b_please_rate_for_pack">B. Please rate for Pack</string>
    <string name="a_please_rate_for_product">A. Please rate for Product</string>
    <string name="write_your_any_other_feedback">Write your any other/feedback...</string>
    <string name="q6_please_rate_for_each_of_these_attributes_on_a_scale_of_1_to_3">Q6. Please rate for each of these attributes on a scale of 1 to 3?</string>
    <string name="thanks_you">Thanks You!</string>
    <string name="we_appreciate_you_taking_the_time_to_complete_our_survey">We appreciate you taking the time to complete our survey.</string>
    <string name="check_out_successful">Check - out Successful</string>
    <string name="you_ve_officially_clocked_out_for_the_day_thank_you_for_your_hard_work_time_to_relax_and_enjoy_your_break">You’ve officially clocked out for the day. Thank you for your hard work! Time to relax and enjoy your break.</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="a_verification_code_has_been_sent_to_your_registered_phone_number_7550_21">A verification code has been sent to your registered Phone Number: 7550****21.</string>
    <string name="you_have_not_been_assigned_any_tasks_today_enjoy_your_free_time_and_feel_free_to_check_back_later">You have not been assigned any tasks today. Enjoy your free time and feel free to check back later.</string>
    <string name="error">Error</string>
    <string name="an_error_occurred_please_reach_out_to_your_support_team_for_assistance">An error occurred. Please reach out to your support team for assistance.</string>
    <string name="access_denied">Access Denied</string>
    <string name="you_are_not_allowed_to_check_in">You are not allowed to Check-in</string>
    <string name="user_check_out">User Check Out</string>
    <string name="shift_check_in">Shift Check In</string>
    <string name="take_a_selfie">Take a Selfie</string>
    <string name="app_version">Version-</string>
    <string name="back">back</string>
    <string name="overlay">overlay</string>
    <string name="_13_jan_2025">13 Jan 2025</string>
    <string name="_12_54_am">12:54 AM</string>
    <string name="display">display</string>
    <string name="cross">cross</string>
    <string name="pencil">pencil</string>
    <string name="please_add_your_signature_in_given_box_below">Please add your signature in given box below.</string>
    <string name="signature">signature</string>
    <string name="background">background</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_is_disabled_on_your_device_current_location_is_necessary_for_attendance_ngoto_settings_page_to_enable_gps"><![CDATA[GPS is disabled on your device. Current location is necessary for attendance. Go to settings page to enable GPS]]></string>
    <string name="smile">smile</string>
    <string name="checkout">Checkout</string>
    <string name="profile">profile</string>
    <string name="your_token_has_been_expired_please_login_again_to_continue">Session expired due to login on another device. Please login again.</string>
    <string name="oops">Oops!</string>
    <string name="refresh">refresh</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="the_request_took_too_long_please_try_again">The request took too long. Please try again.</string>
    <string name="please_check_your_internet_connection_your_internet_speed_may_be_slow_or_unavailable">Please check your internet connection. Your internet speed may be slow or unavailable.</string>
    <string name="slow_internet_connection">Slow Internet Connection</string>
    <string name="select_pack_size">Select pack size</string>
    <string name="update_available">Update Available</string>
    <string name="a_new_version_of_the_app_is_available_do_you_want_to_update_now">A new version of the app is available. Do you want to update now?</string>
    <string name="later">Later</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="no_update_available">No Update Available</string>
    <string name="your_app_is_already_up_to_date">Your app is already up-to-date!</string>
    <string name="your_application_is_up_to_date">Your Application is up to Date!</string>
    <string name="application_update_available">Update Available!</string>
    <string name="what_s_new_nbug_fixes_amp_performance_improvements"><![CDATA[What’s new\nBug Fixes & Performance improvements.]]></string>
    <string name="update_now">Update now</string>
    <string name="application_update">Application Update</string>
    <string name="choose_your_mode">Choose Your Mode</string>
    <string name="continue_">Continue</string>
    <string name="production">Production</string>
    <string name="demo">Demo</string>
    <string name="report">Report Issue</string>
    <string name="title">Title</string>
    <string name="write_here">write here....</string>
    <string name="description">Description</string>
    <string name="steps_to_reproduce">Steps to Reproduce</string>
    <string name="expected_behavior">Expected Behavior</string>
    <string name="actual_behavior">Actual Behavior</string>
    <string name="select">select</string>
    <string name="frequency">Frequency</string>
    <string name="network">Network</string>
    <string name="upload">Upload File</string>
    <string name="cancel">Cancel</string>
    <string name="upload_screenshot">Upload Screenshot</string>
    <string name="report_submitted">Report Submitted!</string>
    <string name="how_to_install">How to install update?</string>
    <string name="_1_install_the_update">1. Install the Update</string>
    <string name="after_downloading_tap_the_notification_or_find_the_file_in_your_downloads_folder_then_tap_install_to_update_the_app">After downloading, tap the notification or find the file in your Downloads folder, then tap Install to update the app.</string>
    <string name="_2_allow_permissions_if_asked">2. Allow Permissions (if asked)</string>
    <string name="if_prompted_allow_installation_from_this_source_and_follow_the_on_screen_instructions">If prompted, allow installation from this source and follow the on-screen instructions.</string>
    <string name="_3_finish_installation">3. Finish Installation</string>
    <string name="after_installation_tap_open_to_launch_the_updated_app_and_enjoy_the_latest_features">After installation, tap Open to launch the updated app and enjoy the latest features.</string>
    <string name="if_you_prefer_you_can_uninstall_the_current_version_of_the_app_before_downloading_the_update">If you prefer, you can uninstall the current version of the app before downloading the update.</string>
    <string name="_4_uninstall_the_existing_app_optional">4. Uninstall the Existing App (Optional)</string>
    <string name="open_downloads">Open Downloads</string>
    <string name="laptop">Laptop</string>
    <string name="perishable">Perishable</string>
    <string name="_35_packets">35 packets</string>
    <string name="_24_9_2025">24-9-2025</string>
</resources>