<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="@color/edit_bg"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:weightSum="4">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/laptop"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/perishable"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/_35_packets"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/_24_9_2025"
        android:textColor="@color/black" />


</LinearLayout>