<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/img_top"
        android:src="@drawable/img_login_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_login"
        android:src="@drawable/img_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textColor="@color/black_2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:paddingStart="60dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black_2"
        android:textColorHint="@color/hint_color"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_heading"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.85" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/img_email"
        android:scaleType="centerCrop"
        android:src="@drawable/img_phone"
        app:layout_constraintBottom_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="@id/edit_phone"
        app:layout_constraintTop_toTopOf="@id/edit_phone" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.925"
        />

</androidx.constraintlayout.widget.ConstraintLayout>