<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:src="@drawable/signature_pop_up_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_cross"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/cross"
        android:src="@drawable/img_cross_orange"
        app:layout_constraintBottom_toBottomOf="@id/img_bg"
        app:layout_constraintEnd_toEndOf="@id/img_bg"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@id/img_bg"
        app:layout_constraintTop_toTopOf="@id/img_bg"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:id="@+id/img_tick"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/pencil"
        android:src="@drawable/img_pencil_signature_orange"
        app:layout_constraintBottom_toBottomOf="@id/img_bg"
        app:layout_constraintEnd_toEndOf="@id/img_bg"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/img_bg"
        app:layout_constraintTop_toTopOf="@id/img_bg"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/txt_leaves_requested"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_add_your_signature_in_given_box_below"
        android:textColor="@color/dark_brown"
        app:layout_constraintEnd_toEndOf="@id/img_bg"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/img_tick"
        app:layout_constraintTop_toBottomOf="@id/img_tick"
        app:layout_constraintWidth_percent="0.8" />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_orange"
        app:layout_constraintEnd_toEndOf="@id/img_bg"
        app:layout_constraintHeight_percent="0.565"
        app:layout_constraintStart_toStartOf="@id/img_bg"
        app:layout_constraintTop_toBottomOf="@id/txt_leaves_requested"
        app:layout_constraintWidth_percent="0.85"
        app:penColor="@android:color/black" />

    <TextView
        android:id="@+id/txt_clear"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_previous_bg_orange"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/signature_pad"
        app:layout_constraintTop_toBottomOf="@id/signature_pad"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.375" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg_orange"
        android:gravity="center"
        android:text="@string/done"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/signature_pad"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintTop_toBottomOf="@id/signature_pad"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.375" />


</androidx.constraintlayout.widget.ConstraintLayout>
