<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otp_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mode.ChooseModeActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/img_top"
        android:src="@drawable/img_login_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_login"
        android:src="@drawable/img_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_mode"
        android:textAlignment="center"
        android:textColor="@color/black_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/img_demo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_demo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_heading"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.35" />

    <ImageView
        android:id="@+id/img_production"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_production"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_heading"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.35" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_light"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/continue_"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_demo"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        />

</androidx.constraintlayout.widget.ConstraintLayout>